--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <!-- Header do Card -->
         <div class="flex items-center space-x-4">
             <div class="w-20 h-20 bg-gray-800 rounded-full flex items-center justify-center border-2 border-cyan-400 shadow-lg">
-            <img src="https://jeiel.pages.dev/jeiel.png" alt="Foto de Jeiel Lima Miranda" class="w-full h-full object-cover rounded-full">
+            <img src="https://jeiel.pages.dev/assets/jeiel-DLoUMvkh.png" alt="Foto de Jeiel Lima Miranda" class="w-full h-full object-cover rounded-full">
             </div>
             <div>
                 <h1 class="text-2xl font-bold neon-text">Jeiel Lima Miranda</h1>
@@ -113,7 +113,7 @@
     <script>
   setTimeout(function() {
     window.location.href = "https://jeiel.pages.dev";
-}, 7000);
+}, 30000);
   </script>
 </body>
 </html>
