--- a/index.html
+++ b/index.html
@@ -146,6 +146,58 @@
     </style>
 </head>
 <body>
+<!-- Alert -->
+    <script src="https://cdn.tailwindcss.com"></script>
+
+<div id="auto-alert" class="hidden fixed top-5 right-5 z-50 flex items-center p-4 mb-4 text-blue-800 rounded-lg bg-blue-50 dark:bg-gray-800 dark:text-blue-400 max-w-lg" role="alert">
+  <svg class="flex-shrink-0 w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+    <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
+  </svg>
+  <span class="sr-only">Info</span>
+  <div class="ms-3 text-sm font-medium">
+    Hey paraense, instale o Linux antes do dia 25 de outubro de 2025: <a href="https://jeielmiranda.is-a.dev/os/" class="font-semibold underline hover:no-underline">Clique aqui para mais informações</a>.
+  </div>
+  <button type="button" id="closeAlertBtn" class="ms-auto -mx-1.5 -my-1.5 bg-blue-50 text-blue-500 rounded-lg focus:ring-2 focus:ring-blue-400 p-1.5 hover:bg-blue-200 inline-flex items-center justify-center h-8 w-8 dark:bg-gray-800 dark:text-blue-400 dark:hover:bg-gray-700" aria-label="Close">
+    <span class="sr-only">Fechar</span>
+    <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
+      <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
+    </svg>
+  </button>
+</div>
+
+<script>
+document.addEventListener('DOMContentLoaded', async () => {
+    const alertBox = document.getElementById('auto-alert');
+    const closeBtn = document.getElementById('closeAlertBtn');
+
+    async function getGeolocation() {
+        try {
+            const response = await fetch('https://ipapi.co/json/');
+            const data = await response.json();
+            return data;
+        } catch (error) {
+            console.error('Erro ao obter geolocalização:', error);
+            return null;
+        }
+    }
+
+    const locationData = await getGeolocation();
+
+    if (locationData) {
+        const isBrazil = locationData.country_code === 'BR';
+        const isPara = locationData.region === 'Pará';
+
+        if (isBrazil && isPara) {
+            alertBox.classList.remove('hidden');
+        }
+    }
+
+    closeBtn.addEventListener('click', () => {
+        alertBox.classList.add('hidden');
+    });
+});
+</script>
+<!-- Alert -->
     <div class="profile-card p-3 p-sm-4 w-100 mx-auto">
         <div class="text-center">
             <img src="https://jeiel.pages.dev/assets/jeiel-DLoUMvkh.png" alt="Foto do Perfil de Jeiel" class="profile-image rounded-circle mx-auto mb-3 object-cover">
